simplify back-end activity types pinning